on mobile nav is now fixed to the bottom

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -8,7 +8,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-top: 5rem;
+    margin-top: 1rem;
     
 
     @include desktop {
