--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -5,25 +5,23 @@
 
 .nav {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  justify-content: center;
   border-bottom: 2px solid $light-grey;
   position: fixed;
-  top: 0;
+  bottom: 0;
   width: 100%;
   background-color: white;
   z-index: 1;
   padding: 1rem 0;
-  box-shadow: 0px 7px 12px -3px rgba(0,0,0,0.05);
+  box-shadow: 0px 7px 12px 5px rgba(0, 0, 0, 0.3);
 
 
   &__logo {
     width: 1rem;
-    margin-left: 2rem;
+    margin: 0 2rem;
 
     @include tablet {
       width: 1.25rem;
-      margin-left: 5rem;
     }
 
     @include desktop {
@@ -32,8 +30,6 @@
   }
 
   &__menu {
-    margin-right: 1rem;
-
     @include tablet {
       margin-right: 4rem;
     }
