--- a/src/components/ProjectGallery/ProjectGallery.scss
+++ b/src/components/ProjectGallery/ProjectGallery.scss
@@ -163,6 +163,7 @@
 
         &--shopify {
             background-color: $shopify-light-green;
+            margin-bottom: 5rem;
 
             &:hover {
                 background-color: $shopify-dark-green;
